--- a/spring_boot_microservices/register-service/src/main/resources/application.properties
+++ b/spring_boot_microservices/register-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type=TRACE
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.data.jpa.repositories.enabled=true
@@ -13,3 +13,6 @@ spring.jpa.open-in-view=false
 
 server.port=8082
 spring.application.name=register-service
+
+# Config devtools
+spring.devtools.livereload.port=35730
