--- a/spring_boot_microservices/login-service/src/main/resources/application.properties
+++ b/spring_boot_microservices/login-service/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jpa.open-in-view=false
 
 server.port=8081
 spring.application.name=login-service
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
