--- a/spring_boot_microservices/register-service/src/main/resources/application.properties
+++ b/spring_boot_microservices/register-service/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.open-in-view=false
 
 server.port=8082
 spring.application.name=register-service
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
 # Config devtools
 spring.devtools.livereload.port=35730
